stop waiting section alignment fixed

--- a/src/scss/sections/_site-footer.scss
+++ b/src/scss/sections/_site-footer.scss
@@ -5,8 +5,7 @@
         background-color: #222;
 
         width: 100%;
-        padding-right: 15px;
-        padding-left: 15px;
+        // padding-right: 15px;// padding-left: 15px;
         // margin-right: auto;
         margin-right: 0;
         // margin-left: auto;
