--- a/src/scss/sections/_stopWaiting-section.scss
+++ b/src/scss/sections/_stopWaiting-section.scss
@@ -3,6 +3,8 @@
     display: flex;
     // -ms-flex-align: center;// align-items: center;
     color: #fff;
+    // height: 920px;
+    height: 1100px;
 
     // padding: 2rem 1rem;
     // margin-bottom: 2rem;
@@ -17,13 +19,21 @@
         content: "";
         position: absolute;
         background-image: url("/dist/img/bg-cta.jpg");
+        background-size: cover;
+        // background-size: contain;
+        background-repeat: no-repeat;
         background-position-x: 70%;
         filter: brightness(50%);
         width: 100%;
-        height: 920px;
+        // height: 920px;
+        height: 1100px;
     }
 
     &__inside {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
         position: relative;
         background-color: transparent;
         padding: 2rem 1rem;
@@ -55,6 +65,12 @@
         padding-right: 3rem;
         padding-top: 1.2rem;
         padding-bottom: 1.2rem;
+
+        &:hover {
+            background-color: #fdcc52;
+            border-color: #fdcc52;
+            transition: all .3s;
+        }
 
         &Text {
             font-size: .9rem;
